environments/istio/ambient/apps/base/80-namespace-app/virtualservice.yaml

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ingress-gw
  namespace: istio-system
  labels:
    seed: "1695851633735537000"
spec:
  hosts:
    - "*"
  gateways:
  - istio-system/http-gateway
  http:
  - name: "ns-1"
    match:
    - uri:
        exact: "/ns-1"
    route:
    - destination:
        host: little-flower.ns-1.svc.cluster.local
        port:
          number: 8080
  - name: "ns-10"
    match:
    - uri:
        exact: "/ns-10"
    route:
    - destination:
        host: still-haze.ns-10.svc.cluster.local
        port:
          number: 8080
  - name: "ns-11"
    match:
    - uri:
        exact: "/ns-11"
    route:
    - destination:
        host: green-thunder.ns-11.svc.cluster.local
        port:
          number: 8080
  - name: "ns-12"
    match:
    - uri:
        exact: "/ns-12"
    route:
    - destination:
        host: damp-bird.ns-12.svc.cluster.local
        port:
          number: 8080
  - name: "ns-13"
    match:
    - uri:
        exact: "/ns-13"
    route:
    - destination:
        host: frosty-glitter.ns-13.svc.cluster.local
        port:
          number: 8080
  - name: "ns-14"
    match:
    - uri:
        exact: "/ns-14"
    route:
    - destination:
        host: proud-sound.ns-14.svc.cluster.local
        port:
          number: 8080
  - name: "ns-15"
    match:
    - uri:
        exact: "/ns-15"
    route:
    - destination:
        host: twilight-leaf.ns-15.svc.cluster.local
        port:
          number: 8080
  - name: "ns-16"
    match:
    - uri:
        exact: "/ns-16"
    route:
    - destination:
        host: sparkling-firefly.ns-16.svc.cluster.local
        port:
          number: 8080
  - name: "ns-17"
    match:
    - uri:
        exact: "/ns-17"
    route:
    - destination:
        host: white-bird.ns-17.svc.cluster.local
        port:
          number: 8080
  - name: "ns-18"
    match:
    - uri:
        exact: "/ns-18"
    route:
    - destination:
        host: muddy-firefly.ns-18.svc.cluster.local
        port:
          number: 8080
  - name: "ns-19"
    match:
    - uri:
        exact: "/ns-19"
    route:
    - destination:
        host: empty-smoke.ns-19.svc.cluster.local
        port:
          number: 8080
  - name: "ns-2"
    match:
    - uri:
        exact: "/ns-2"
    route:
    - destination:
        host: sparkling-paper.ns-2.svc.cluster.local
        port:
          number: 8080
  - name: "ns-20"
    match:
    - uri:
        exact: "/ns-20"
    route:
    - destination:
        host: broken-surf.ns-20.svc.cluster.local
        port:
          number: 8080
  - name: "ns-21"
    match:
    - uri:
        exact: "/ns-21"
    route:
    - destination:
        host: falling-haze.ns-21.svc.cluster.local
        port:
          number: 8080
  - name: "ns-22"
    match:
    - uri:
        exact: "/ns-22"
    route:
    - destination:
        host: autumn-tree.ns-22.svc.cluster.local
        port:
          number: 8080
  - name: "ns-23"
    match:
    - uri:
        exact: "/ns-23"
    route:
    - destination:
        host: dry-water.ns-23.svc.cluster.local
        port:
          number: 8080
  - name: "ns-24"
    match:
    - uri:
        exact: "/ns-24"
    route:
    - destination:
        host: dawn-field.ns-24.svc.cluster.local
        port:
          number: 8080
  - name: "ns-25"
    match:
    - uri:
        exact: "/ns-25"
    route:
    - destination:
        host: frosty-bird.ns-25.svc.cluster.local
        port:
          number: 8080
  - name: "ns-26"
    match:
    - uri:
        exact: "/ns-26"
    route:
    - destination:
        host: quiet-star.ns-26.svc.cluster.local
        port:
          number: 8080
  - name: "ns-27"
    match:
    - uri:
        exact: "/ns-27"
    route:
    - destination:
        host: aged-water.ns-27.svc.cluster.local
        port:
          number: 8080
  - name: "ns-28"
    match:
    - uri:
        exact: "/ns-28"
    route:
    - destination:
        host: autumn-dust.ns-28.svc.cluster.local
        port:
          number: 8080
  - name: "ns-29"
    match:
    - uri:
        exact: "/ns-29"
    route:
    - destination:
        host: white-violet.ns-29.svc.cluster.local
        port:
          number: 8080
  - name: "ns-3"
    match:
    - uri:
        exact: "/ns-3"
    route:
    - destination:
        host: purple-water.ns-3.svc.cluster.local
        port:
          number: 8080
  - name: "ns-30"
    match:
    - uri:
        exact: "/ns-30"
    route:
    - destination:
        host: aged-glitter.ns-30.svc.cluster.local
        port:
          number: 8080
  - name: "ns-31"
    match:
    - uri:
        exact: "/ns-31"
    route:
    - destination:
        host: holy-pine.ns-31.svc.cluster.local
        port:
          number: 8080
  - name: "ns-32"
    match:
    - uri:
        exact: "/ns-32"
    route:
    - destination:
        host: winter-night.ns-32.svc.cluster.local
        port:
          number: 8080
  - name: "ns-33"
    match:
    - uri:
        exact: "/ns-33"
    route:
    - destination:
        host: cold-wildflower.ns-33.svc.cluster.local
        port:
          number: 8080
  - name: "ns-34"
    match:
    - uri:
        exact: "/ns-34"
    route:
    - destination:
        host: summer-haze.ns-34.svc.cluster.local
        port:
          number: 8080
  - name: "ns-35"
    match:
    - uri:
        exact: "/ns-35"
    route:
    - destination:
        host: snowy-darkness.ns-35.svc.cluster.local
        port:
          number: 8080
  - name: "ns-36"
    match:
    - uri:
        exact: "/ns-36"
    route:
    - destination:
        host: lingering-night.ns-36.svc.cluster.local
        port:
          number: 8080
  - name: "ns-37"
    match:
    - uri:
        exact: "/ns-37"
    route:
    - destination:
        host: sparkling-dawn.ns-37.svc.cluster.local
        port:
          number: 8080
  - name: "ns-38"
    match:
    - uri:
        exact: "/ns-38"
    route:
    - destination:
        host: misty-sunset.ns-38.svc.cluster.local
        port:
          number: 8080
  - name: "ns-39"
    match:
    - uri:
        exact: "/ns-39"
    route:
    - destination:
        host: dawn-lake.ns-39.svc.cluster.local
        port:
          number: 8080
  - name: "ns-4"
    match:
    - uri:
        exact: "/ns-4"
    route:
    - destination:
        host: withered-wildflower.ns-4.svc.cluster.local
        port:
          number: 8080
  - name: "ns-40"
    match:
    - uri:
        exact: "/ns-40"
    route:
    - destination:
        host: snowy-sky.ns-40.svc.cluster.local
        port:
          number: 8080
  - name: "ns-41"
    match:
    - uri:
        exact: "/ns-41"
    route:
    - destination:
        host: broken-resonance.ns-41.svc.cluster.local
        port:
          number: 8080
  - name: "ns-42"
    match:
    - uri:
        exact: "/ns-42"
    route:
    - destination:
        host: lively-wave.ns-42.svc.cluster.local
        port:
          number: 8080
  - name: "ns-43"
    match:
    - uri:
        exact: "/ns-43"
    route:
    - destination:
        host: still-wave.ns-43.svc.cluster.local
        port:
          number: 8080
  - name: "ns-44"
    match:
    - uri:
        exact: "/ns-44"
    route:
    - destination:
        host: morning-smoke.ns-44.svc.cluster.local
        port:
          number: 8080
  - name: "ns-45"
    match:
    - uri:
        exact: "/ns-45"
    route:
    - destination:
        host: summer-field.ns-45.svc.cluster.local
        port:
          number: 8080
  - name: "ns-46"
    match:
    - uri:
        exact: "/ns-46"
    route:
    - destination:
        host: shy-cloud.ns-46.svc.cluster.local
        port:
          number: 8080
  - name: "ns-47"
    match:
    - uri:
        exact: "/ns-47"
    route:
    - destination:
        host: ancient-night.ns-47.svc.cluster.local
        port:
          number: 8080
  - name: "ns-48"
    match:
    - uri:
        exact: "/ns-48"
    route:
    - destination:
        host: wandering-flower.ns-48.svc.cluster.local
        port:
          number: 8080
  - name: "ns-49"
    match:
    - uri:
        exact: "/ns-49"
    route:
    - destination:
        host: wandering-sound.ns-49.svc.cluster.local
        port:
          number: 8080
  - name: "ns-5"
    match:
    - uri:
        exact: "/ns-5"
    route:
    - destination:
        host: cold-bird.ns-5.svc.cluster.local
        port:
          number: 8080
  - name: "ns-50"
    match:
    - uri:
        exact: "/ns-50"
    route:
    - destination:
        host: aged-cloud.ns-50.svc.cluster.local
        port:
          number: 8080
  - name: "ns-51"
    match:
    - uri:
        exact: "/ns-51"
    route:
    - destination:
        host: still-glitter.ns-51.svc.cluster.local
        port:
          number: 8080
  - name: "ns-52"
    match:
    - uri:
        exact: "/ns-52"
    route:
    - destination:
        host: muddy-wave.ns-52.svc.cluster.local
        port:
          number: 8080
  - name: "ns-53"
    match:
    - uri:
        exact: "/ns-53"
    route:
    - destination:
        host: hidden-cherry.ns-53.svc.cluster.local
        port:
          number: 8080
  - name: "ns-54"
    match:
    - uri:
        exact: "/ns-54"
    route:
    - destination:
        host: floral-sea.ns-54.svc.cluster.local
        port:
          number: 8080
  - name: "ns-55"
    match:
    - uri:
        exact: "/ns-55"
    route:
    - destination:
        host: silent-sea.ns-55.svc.cluster.local
        port:
          number: 8080
  - name: "ns-56"
    match:
    - uri:
        exact: "/ns-56"
    route:
    - destination:
        host: black-paper.ns-56.svc.cluster.local
        port:
          number: 8080
  - name: "ns-57"
    match:
    - uri:
        exact: "/ns-57"
    route:
    - destination:
        host: crimson-lake.ns-57.svc.cluster.local
        port:
          number: 8080
  - name: "ns-58"
    match:
    - uri:
        exact: "/ns-58"
    route:
    - destination:
        host: weathered-snowflake.ns-58.svc.cluster.local
        port:
          number: 8080
  - name: "ns-59"
    match:
    - uri:
        exact: "/ns-59"
    route:
    - destination:
        host: weathered-water.ns-59.svc.cluster.local
        port:
          number: 8080
  - name: "ns-6"
    match:
    - uri:
        exact: "/ns-6"
    route:
    - destination:
        host: red-voice.ns-6.svc.cluster.local
        port:
          number: 8080
  - name: "ns-60"
    match:
    - uri:
        exact: "/ns-60"
    route:
    - destination:
        host: wispy-sound.ns-60.svc.cluster.local
        port:
          number: 8080
  - name: "ns-61"
    match:
    - uri:
        exact: "/ns-61"
    route:
    - destination:
        host: polished-leaf.ns-61.svc.cluster.local
        port:
          number: 8080
  - name: "ns-62"
    match:
    - uri:
        exact: "/ns-62"
    route:
    - destination:
        host: spring-snow.ns-62.svc.cluster.local
        port:
          number: 8080
  - name: "ns-63"
    match:
    - uri:
        exact: "/ns-63"
    route:
    - destination:
        host: young-shadow.ns-63.svc.cluster.local
        port:
          number: 8080
  - name: "ns-64"
    match:
    - uri:
        exact: "/ns-64"
    route:
    - destination:
        host: quiet-glitter.ns-64.svc.cluster.local
        port:
          number: 8080
  - name: "ns-65"
    match:
    - uri:
        exact: "/ns-65"
    route:
    - destination:
        host: bitter-cloud.ns-65.svc.cluster.local
        port:
          number: 8080
  - name: "ns-66"
    match:
    - uri:
        exact: "/ns-66"
    route:
    - destination:
        host: falling-sun.ns-66.svc.cluster.local
        port:
          number: 8080
  - name: "ns-67"
    match:
    - uri:
        exact: "/ns-67"
    route:
    - destination:
        host: sparkling-tree.ns-67.svc.cluster.local
        port:
          number: 8080
  - name: "ns-68"
    match:
    - uri:
        exact: "/ns-68"
    route:
    - destination:
        host: blue-thunder.ns-68.svc.cluster.local
        port:
          number: 8080
  - name: "ns-69"
    match:
    - uri:
        exact: "/ns-69"
    route:
    - destination:
        host: wispy-waterfall.ns-69.svc.cluster.local
        port:
          number: 8080
  - name: "ns-7"
    match:
    - uri:
        exact: "/ns-7"
    route:
    - destination:
        host: rough-forest.ns-7.svc.cluster.local
        port:
          number: 8080
  - name: "ns-70"
    match:
    - uri:
        exact: "/ns-70"
    route:
    - destination:
        host: cool-water.ns-70.svc.cluster.local
        port:
          number: 8080
  - name: "ns-71"
    match:
    - uri:
        exact: "/ns-71"
    route:
    - destination:
        host: late-firefly.ns-71.svc.cluster.local
        port:
          number: 8080
  - name: "ns-72"
    match:
    - uri:
        exact: "/ns-72"
    route:
    - destination:
        host: black-sound.ns-72.svc.cluster.local
        port:
          number: 8080
  - name: "ns-73"
    match:
    - uri:
        exact: "/ns-73"
    route:
    - destination:
        host: crimson-sea.ns-73.svc.cluster.local
        port:
          number: 8080
  - name: "ns-74"
    match:
    - uri:
        exact: "/ns-74"
    route:
    - destination:
        host: proud-wind.ns-74.svc.cluster.local
        port:
          number: 8080
  - name: "ns-75"
    match:
    - uri:
        exact: "/ns-75"
    route:
    - destination:
        host: sparkling-water.ns-75.svc.cluster.local
        port:
          number: 8080
  - name: "ns-76"
    match:
    - uri:
        exact: "/ns-76"
    route:
    - destination:
        host: fragrant-water.ns-76.svc.cluster.local
        port:
          number: 8080
  - name: "ns-77"
    match:
    - uri:
        exact: "/ns-77"
    route:
    - destination:
        host: green-wildflower.ns-77.svc.cluster.local
        port:
          number: 8080
  - name: "ns-78"
    match:
    - uri:
        exact: "/ns-78"
    route:
    - destination:
        host: ancient-pond.ns-78.svc.cluster.local
        port:
          number: 8080
  - name: "ns-79"
    match:
    - uri:
        exact: "/ns-79"
    route:
    - destination:
        host: icy-wind.ns-79.svc.cluster.local
        port:
          number: 8080
  - name: "ns-8"
    match:
    - uri:
        exact: "/ns-8"
    route:
    - destination:
        host: muddy-pine.ns-8.svc.cluster.local
        port:
          number: 8080
  - name: "ns-80"
    match:
    - uri:
        exact: "/ns-80"
    route:
    - destination:
        host: white-snow.ns-80.svc.cluster.local
        port:
          number: 8080
  - name: "ns-9"
    match:
    - uri:
        exact: "/ns-9"
    route:
    - destination:
        host: silent-dream.ns-9.svc.cluster.local
        port:
          number: 8080
---
